<resources>
    <string name="dun_title">Dial Up Networking</string>
    <string name="evdo_tethered_mode">3G tethered mode</string>
    <string name="dun_summary">Connect to data services using dial up network</string>
    <string name="dun_allow_warning">Allow dial up network? You cannot use other data services (i.e browser, MMS etc.). After using dial up network, turn it off to use other data services.</string>
    <string name="dun_active_notification">Voice calls are not available when using your phone as a modem. Please disconnect and try your call again.</string>
    <string name="hardware_version">Hardware version</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Disconnect USB storage</string>
    <string name="sdcard_unmount_sd">Unmount SD card</string>
    <string name="sdcard_format">Format USB storage</string>
    <string name="sdcard_format_sd">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %s seconds</string>
    <string name="bluetooth_is_discoverable_always">Discoverable</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Discoverable time-out</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable for</string>
    <string name="bluetooth_lock_voice_dialing">Disable voice dialling</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan devices</string>
    <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting...</string>
    <string name="bluetooth_connecting">Connecting...</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing...</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device_paired">Paired</string>
    <string name="bluetooth_device">Handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">Application requests to turn on Bluetooth. Continue?</string>
    <string name="bluetooth_ask_discovery">Application on your device is requesting permission to make your device visible to other Bluetooth devices for %1$d seconds. Allow?</string>
    <string name="bluetooth_ask_lasting_discovery">Application on your device is requesting permission to make your device visible to other devices. Allow?</string>
    <string name="bluetooth_ask_enablement_and_discovery">Application on your device is requesting permission to turn on Bluetooth and to make your device visible to other devices for %1$d seconds. Allow?</string>
    <string name="bluetooth_ask_enablement_and_lasting_discovery">Application on your device is requesting permission to turn on Bluetooth and to make your device visible to other devices. Allow?</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth...</string>
    <string name="bluetooth_scan_text">Empty button…</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="bluetooth_settings_title">Bluetooth settings</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name and visibility</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Use NFC to read and exchange tags</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="wifi_settings_summary">Set up and manage WAPs</string>
    <string name="tether_settings_title_usb">Tethering</string>
    <string name="tether_settings_summary_usb">"Share your phone's mobile data connection via USB"</string>
    <string name="usb_connection_settings_title">USB connection</string>
    <string name="usb_connection_settings_summary">Select USB connection mode</string>
    <string name="charging_quick_toggle_title">Charging</string>
    <string name="usb_charging_button_title">Charging</string>
    <string name="charging_quick_toggle_summary">Device charging</string>
    <string name="mass_storage_quick_toggle_title">Mass storage</string>
    <string name="usb_mass_storage_button_title">Mass storage</string>
    <string name="mass_storage_quick_toggle_summary">Data transfer by UMS protocol</string>
    <string name="tethered_quick_toggle_title">Tethered mode</string>
    <string name="usb_tethered_button_title">Tethered mode</string>
    <string name="tethered_quick_toggle_summary">Use phone as an external modem</string>
    <string name="askonconnection_quick_toggle_title">Ask on connection</string>
    <string name="askonconnection_quick_toggle_summary">Select mode when USB connected</string>
    <string name="usb_connect_title">USB connected</string>
    <string name="usb_connect_activity_title">Select USB mode</string>
    <string name="usb_remember_choice_title">Remember this choice</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="network_settings_summary">Set options for networks</string>
    <string name="vpn_settings_title">VPN settings</string>
    <string name="vpn_settings_summary">Set up and manage Virtual Private Networks (VPNs)</string>
    <string name="update_notification">New application notification</string>
    <string name="off">Off</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="packet_data">Packet data</string>
    <string name="wireless_synchronise_title">Synchronise</string>
    <string name="wireless_synchronise_summary">Synchronise data with servers and set sync profiles</string>
    <string name="mobileap_settings_summary">Enable other devices to connect Internet via 3G network of your phone</string>
    <string name="mobileap">Wireless Hotspot</string>
    <string name="mobileap_instruction_inactivate">"You can share your device's Wireless Hotspot with Wi-Fi enabled devices.

After you start the Mobile Hotspot Wi-Fi router, connect using the controls on your Wi-Fi enabled device."</string>
    <string name="mobileap_instruction_activate" formatted="false">"1. Turn Wi-Fi on.

2. Refresh the available Wi-Fi network list.

3. Select %1$s from available networks.

4. Enter %2$s in the %3$s field."</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="mobileap_instruction_activate_onpc">On your PC...</string>
    <string name="roaming_settings_title">Roaming</string>
    <string name="roaming_settings_summary">Set options for roaming</string>
</resources>