<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:id="@id/USBModeTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/usb_connect_activity_title" />
    <ImageView android:id="@id/icon" android:layout_width="120.0dip" android:layout_height="120.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/usb_android" android:layout_below="@id/USBModeTitle" android:layout_centerHorizontal="true" />
    <TextView android:textSize="20.0sp" android:id="@id/banner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/usb_connect_title" android:layout_below="@id/icon" android:layout_centerHorizontal="true" />
    <Button android:id="@id/charging_button" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/usb_charging_button_title" android:layout_below="@id/banner" android:layout_centerHorizontal="true" />
    <Button android:id="@id/mass_storage_button" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/usb_mass_storage_button_title" android:layout_below="@id/charging_button" android:layout_centerHorizontal="true" />
    <Button android:id="@id/tethered_button" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/usb_tethered_button_title" android:layout_below="@id/mass_storage_button" android:layout_centerHorizontal="true" />
    <CheckBox android:id="@id/remember_choice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/usb_remember_choice_title" android:layout_below="@id/tethered_button" android:layout_centerHorizontal="true" />
</RelativeLayout>
