<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/wifiap_help_orient_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/mobileap_instruction_inactivate_oreint_title" android:paddingLeft="8.0px" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="38.0px" style="?android:attr/listSeparatorTextViewStyle" />
    <FrameLayout android:orientation="horizontal" android:id="@id/wifiap_help_orient_layout_second" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="false"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/mobileap_help_orient_image" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mobile_ap_bg_h" android:scaleType="matrix" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="24.0px" android:textColor="@android:color/white" android:id="@android:attr/permission" android:paddingLeft="21.0px" android:paddingTop="19.0px" android:scrollbars="none" android:layout_width="454.0px" android:layout_height="fill_parent" android:text="@string/mobileap_instruction_inactivate" />
        <ImageView android:id="@id/mobileap_help_orient_image_onpc" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/mobile_ap_onpc_bg_h" android:scaleType="matrix" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="45.0px" android:textStyle="bold" android:textColor="#ffffffff" android:id="@android:attr/readPermission" android:paddingLeft="510.0px" android:paddingTop="200.0px" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/mobileap_instruction_activate_onpc" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="24.0px" android:textColor="#ffffffff" android:id="@android:attr/writePermission" android:paddingLeft="21.0px" android:paddingTop="0.0px" android:scrollbars="none" android:layout_width="500.0px" android:layout_height="fill_parent" android:text="@string/mobileap_instruction_activate" />
    </FrameLayout>
</LinearLayout>
